Replace Google Fonts import via <link> tag with postcss-font-magician.

--- a/src/base/main.html
+++ b/src/base/main.html
@@ -12,6 +12,6 @@
       -->
     </div>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet"> -->
   </body>
 </html>
